# biglaw-3l-monitor

./: .gitignore  DECISIONS.md  README.md  classify.py  config.yaml  firms.yaml  main.py  pyproject.toml  requirements.txt  state.db
.github/workflows/: classify.yml  monitor.yml
core/: __init__.py  diff.py  filter.py  http.py  models.py  normalize.py  notify.py
fetchers/: __init__.py  ashby.py  base.py  browser.py  careerpage.py  generic.py  greenhouse.py  jsonapi.py  lever.py  radancy.py  smartrecruiters.py  virecruit.py  workday.py
tests/: conftest.py  test_browser.py  test_classify.py  test_diff.py  test_fetchers.py  test_filter.py  test_generic.py  test_main.py  test_normalize.py  test_notify.py
